pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - image: docker.io/dpage/pgadmin4:snapshot
          name: pgadmin
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
