pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: http
